# yawl

./: .clang-format  .clangd  .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure  configure.ac  yawl.c
.github/workflows/: main.yml
build-aux/: download-deps.sh  muslconfig.cache  zig-cc-db-parser.py
src/: apparmor.c  apparmor.cpp  apparmor.h  apparmor.hpp  bwrap_data.h  cleanup.h  log.c  log.cpp  log.h  log.hpp  macros.h  macros.hpp  nsenter.c  nsenter.cpp  nsenter.h  nsenter.hpp  result.c  result.cpp  result.h  result.hpp  strings.c  strings.h  update.c  update.cpp  update.h  update.hpp  util.c  util.cpp  util.h  util.hpp  yawl.c  yawl.cpp  yawlconfig.cpp  yawlconfig.hpp
